--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/luxon": "^3.3.7",
     "lucide-react": "^0.303.0",
     "luxon": "^3.4.4",
